@@ -97,3 +97,8 @@ struct CannotExtractFile : virtual ExceptionBase {};
 struct CannotCopyFile : virtual ExceptionBase {};
 typedef boost::error_info< struct file_copypath, std::string > errinfo_file_copypath;
 
+/**
+ * Thrown when the user tries to open a file encrypted with DRM.
+ */
+struct FileEncryptedWithDrm : virtual ExceptionBase {};
+
